--- a/Inlämningsuppgift/style.css
+++ b/Inlämningsuppgift/style.css
@@ -4,7 +4,20 @@
 
 ul{
   display:inline-block;
+  padding-right: 100px;
 }
+
+img {
+  padding-top:30px;
+  
+ 
+}
+
+h1 {
+  padding-top: 9px;
+  padding-right: 100px;
+}
+
 
 
 
