--- a/Inlämningsuppgift/style.css
+++ b/Inlämningsuppgift/style.css
@@ -12,15 +12,15 @@ ul{
 
 img {
   padding-top:30px;
-  padding-right:px;
+  padding-inline-end: 50px;
   
  
 }
 
 h2 {
   
-  padding-bottom: 30px;
-  padding-right: 800px;
+  margin-bottom: 150px;
+  padding-right: 200px;
 }
 
 body {
@@ -40,7 +40,9 @@ nav{
   align-items: center;
   justify-content: space-around;
 
-  p {}
+  label {
+    margin-right: px;
+  }
 
 
 
