--- a/Inlämningsuppgift/style.css
+++ b/Inlämningsuppgift/style.css
@@ -218,3 +218,24 @@ width: 100%;
     max-width: 1140px;
   }
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+}
+
+#box-1 { background: white; }
+
+
+.box {
+  padding: 1rem;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+
+}
