--- a/Inlämningsuppgift/style.css
+++ b/Inlämningsuppgift/style.css
@@ -256,12 +256,48 @@ width: 100%;
 .content-box2 .content2 h1 {
   text-align: center;
   font-family: 'Roboto Slab', serif;
-    font-size: 40px;
+  color: #363636;
     font-weight: 300;
     line-height: 1.1;
+    font-size: 2.8rem;
+    background-color: #F7F7F7;
+    padding-top:10rem;
+    
+}
+   .content-box2 .content2 svg {
+   
+    }
+
+    .grid {
+      padding-right: 10rem;
+      padding-left: 10rem;
+      padding-top: 3rem;
+      padding-bottom: 8rem;
+    }
+
+    .grid button {
+      padding: 2rem;
+    }
+
+.grid h1 {
+  text-align: center;
+  font-family: 'Roboto Slab', serif;
+  font-weight: 300;
+  line-height: 1.1;
+  color: #363636;
+  font-size: 1.5rem;
+  margin-bottom:1rem;
+  margin-top:1rem;
 }
 
-
+.grid p {
+  text-align: center;
+  font-weight: 150;
+  font-size: 0.9rem;
+  color: #626262;
+  
+  font-family: 'Roboto', serif;
+}
 
 
 .d-flex {
