--- a/Inlämningsuppgift/style.css
+++ b/Inlämningsuppgift/style.css
@@ -358,11 +358,51 @@ footer {
 }
 
 .grid33 {
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-    gap: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  
+  
+  
 
 
+
+grid-template-areas: "h h h a a"
+                   "m m m a a"
+                   "m m m a a"
+                   "f b i a a"
+                  }                    
+#box-1 {
+grid-area: h;
 }
+
+#box-2 {
+  grid-area: m;
+}
+
+#box-3 {
+  grid-area: a;
+}
+
+#box-4 {
+  grid-area: f;
+}
+
+#box-5 {
+  grid-area: b;
+}
+
+#box-6 {
+  grid-area: i;
+}
+
+
+
+
+
+
+
+
+
 
 
