--- a/Inlämningsuppgift/style.css
+++ b/Inlämningsuppgift/style.css
@@ -361,6 +361,8 @@ footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
+  padding-left: 10rem;
+  padding-right:10rem;
   padding-top: 5rem;
   
   
@@ -370,17 +372,43 @@ footer {
 
 
 grid-template-areas: "h h h a a"
-                   "m m m a a"
-                   "m m m a a"
-                   "f b i a a"
-                  }                    
+                    "f b i a a"
+                   
+}  
+
+#box-1 h1{
+  font-family: 'Roboto Slab', serif;
+  color: #363636;
+    font-weight: 300;
+    line-height: 1.1;
+    font-size: 2.8rem;
+    padding-top: 5rem;
+}
+
+                  
+#box-1 p{
+ font-family: 'Roboto', sans-serif;
+ font-size: 18px;
+ color: #626262;
+  justify-content: space-between;
+  font-weight: 350;
+  
+}
+#heej p{
+  padding-top: 3rem;
+}
+
+#hej p{
+  padding-top: 2rem;
+}
+#förändring h1 {
+  font-size: 40px;
+}
 #box-1 {
 grid-area: h;
 }
 
-#box-2 {
-  grid-area: m;
-}
+
 
 #box-3 {
   grid-area: a;
