--- a/Inlämningsuppgift/style.css
+++ b/Inlämningsuppgift/style.css
@@ -28,6 +28,16 @@ a {
   background-color: transparent;
 }
 
+a i {
+  color: #2BAAEC;
+  padding-right: 15px;
+}
+
+a i:hover {
+  color:#25e6c8;
+
+}
+
 a:hover {
   color: #25e6c8;
   text-decoration: underline;
@@ -61,13 +71,14 @@ a:hover {
   border: 1px solid transparent;
   background-color: transparent;
   font-size: 1rem;
-
+  
 }
 
 .btn-greenish {
 color: #fff;
 background-color: #25e6c8;
 font-weight: bold;
+font-family: 'Roboto', serif;
 }
 
 .btn-greenish:hover {
@@ -108,6 +119,7 @@ width: 100%;
 
 .navbar-top .container .hours {
   color: #626262;
+  
 }
 
 .navbar-top .container .hours i {
@@ -180,11 +192,26 @@ width: 100%;
     font-size: 2.8rem;
     font-weight: 300;
     line-height: 1.1;
+    color: #363636;
   }
 
   .content-box .content p {
-    font-size: 0.9rem;
+    font-size: 18;
+    font-family: 'Roboto', serif;
+    color: #626262;
+    line-height: 1.5;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    
+
+    
+
   }
+
+ .placering {
+  margin-left: -6rem;
+  margin-bottom: -6px;
+ }
 
 
 
@@ -290,7 +317,8 @@ width: 100%;
   gap: 1rem;
   padding-left: 10rem;
   padding-right:10rem;
-  padding-top: 5rem;
+  padding-top: 4rem;
+  margin-bottom:-1.35rem;
   
   
   
@@ -464,11 +492,17 @@ padding: 1.5rem;
   background-color: #2BAAEC;
 }
 
+
+
+
 #appointment {
   background-color: #dedede;
   font-family: 'Roboto', sans-serif;
   font-size: 1.5rem;
   color: #ffffff;
+
+
+  
   
     
 }
